# lotus-search

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.local  EXAMPLE_QUERIES.md  Home.py  LICENSE  Makefile  README.md  _typos.toml  api.py  app.py  chemistry_helpers.py  config.py  dash_app.py  dash_common.py  data_structures.md  docker-compose.yml  download_couples.py  download_couples_referenced.py  download_smiles.py  download_taxa.py  generate_database.py  home.md  main.py  model.py  processing_common.py  pyproject.toml  sdf_helpers.py  tox.ini  ui_common.py  update.py
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot.yml  weekly.yml
.streamlit/: config.toml
api/: api.py  models.py  queries.py
api/napapi/reference_manager/: apps.py  filters.py  models.py  views.py
benchmarks/: benchmark_basic.py
contributions/: .gitkeep
contributor/: Home.py  chemistry.py
contributor/.streamlit/: config.toml
dash/: dash_app.py  dash_common.py  dash_config.py  data_provider.py  home.md  main.py
dash/assets/: custom.css
django_api/: pyproject.toml
django_api/napapi/: manage.py
django_api/napapi/napapi/: asgi.py  settings.py  urls.py  wsgi.py
django_api/napapi/reference_manager/: README.md  admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
django_api/napapi/reference_manager/migrations/: 0001_initial.py  0002_reference_data_delete_referencedata.py  0003_reference_id_alter_reference_wid.py  0004_alter_reference_wid.py
doc/: EXAMPLE_QUERIES.md  Makefile  data_structures.md  example_queries.http
doc/api/: Dockerfile  Makefile  README.md  lotus_api.yaml  redocly.yaml
doc/api/rapidoc/: index.html
doc/api/schemas/: StructureOption.yaml  _index.yaml  compound.yaml  couple.yaml  coupleResult.yaml  filterItem.yaml  item.yaml  limit.yaml  organism.yaml  referenceId.yaml  referenceInfo.yaml  referenceItem.yaml  referenceObject.yaml  referenceOption.yaml  referenceResult.yaml  references.yaml  structure.yaml  structureFilterItem.yaml  structureId.yaml  structureInfo.yaml  structureItem.yaml  structureObject.yaml  structureOption.yaml  structureResult.yaml  structure_with_similarity_and_taxa_count.yaml  structures.yaml  taxa.yaml  taxon.yaml  taxonFilterItem.yaml  taxonId.yaml  taxonInfo.yaml  taxonItem.yaml  taxonObject.yaml  taxonOption.yaml  taxonResult.yaml  taxon_with_structure_count.yaml  tripletResult.yaml  validationError.yaml
frontend/: Dockerfile  README.md  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  start.sh  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: HelloWorld.vue
frontend/src/interfaces/: lotus_api.ts  schemas.ts  structure_search_query.ts
frontend/src/router/: index.ts
frontend/src/store/: app.ts  (+1 more)
model/: data_model.py  model.py
pages/: 1_Taxon_search.py  2_Structure_search.py  3_Molecule_taxa.py  3_My_compound_is_missing.py  666_molecule.py  666_taxon.py  9_About.py  about.py  api_usage.py  contribute.py  home.py  structure.py  taxon.py  taxon_resolver.py  visible_01_taxon_search.py  visible_structure_search.py  visible_taxon_search.py
pages_streamlit/: 3_My_compound_is_missing.py
plotly_dash_ketcher/: 923.plotly_dash_ketcher.js  PlotlyDashKetcher.py  __init__.py  _imports_.py  metadata.json  package-info.json  plotly_dash_ketcher.js.LICENSE.txt
storage/: references.py  schema_version.py  schemas.py  storage.py  structures.py  triplets.py
storage/models/: __init__.py  journals.py  references.py  schema_version.py  structures.py  structures_descriptors.py  taxo_names.py  taxo_parents.py  taxo_rank_names.py  taxo_ranks.py  triplets.py
tests/: common.py  test_api_autocomplete.py  test_api_depiction_structure.py  test_api_descriptors.py  test_api_references.py  test_api_structure.py  test_api_structures.py  test_api_taxa.py  test_api_triplets.py  test_common.py  test_datamodel.py  test_download_couples_referenced.py  test_download_doi.py  test_download_query_as_csv.py  test_download_smiles.py  test_download_taxonomy_parenting.py  test_generate_database.py  test_generate_database_chemo.py  test_journals.py  test_references.py  test_schema_version.py  test_structures.py  test_task.py  test_taskrunner.py  test_triplets.py  test_update.py
tests/fixtures/: dois.csv  lotus.sdf  ranks_names.csv  references.csv  smiles.csv  structures.csv  taxa.csv  taxa_all.csv  taxa_names_com.csv  taxa_parents.csv  taxa_ranks.csv  triplets.csv
update/: common.py  config.py  download_couples_referenced.py  download_doi.py  download_dois.py  download_query_as_csv.py  download_smiles.py  download_taxa.py  download_taxa_all.py  download_taxa_parents.py  download_taxa_ranks.py  download_taxonomy_parenting.py  generate_database.py  generate_database_biblio.py  generate_database_chemo.py  generate_database_couples.py  generate_database_index.py  generate_database_taxo.py  generate_structure_database.py  methods.py  models.py  sdfwip.py  taskrunner.py  taxo_helper.py
update/queries/: classes_cxsmiles.rq  classes_inchi.rq  classes_parents.rq  classes_smarts.rq  classes_smiles_canonical.rq  classes_smiles_isomeric.rq  couples_referenced.rq  journals.rq  ranks_names.rq  references.rq  structures.rq  structures_classes.rq  structures_ids_cas.rq  structures_ids_chebi.rq  structures_ids_chembl.rq  structures_ids_chemspider.rq  structures_ids_csd.rq  structures_ids_drugbank.rq  structures_ids_dsstox_compound.rq  structures_ids_dsstox_substance.rq  structures_ids_ec.rq  structures_ids_echa.rq  structures_ids_hmdb.rq  structures_ids_kegg.rq  structures_ids_knapsack.rq  structures_ids_lipidmaps.rq  structures_ids_massbank.rq  structures_ids_nmrshiftdb.rq  structures_ids_npatlas.rq  structures_ids_nsc.rq  structures_ids_pdb_ligand.rq  structures_ids_pdb_structure.rq  structures_ids_probes_and_drugs.rq  structures_ids_pubchem.rq  structures_ids_splash.rq  structures_ids_surechembl.rq  structures_ids_swisslipids.rq  structures_ids_unichem.rq  structures_ids_unii.rq  structures_ids_zinc.rq  (+23 more)
(+40 files in other folders)
