[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "lotus_search"
version = "0.1.2"
description = "Lotus Search"
readme = "README.md"
requires-python = "==3.13.*"
license = { text = "LICENSE" }
authors = [
  { name = "Jonathan Bisson", email = "bjonnh-git@bjonnh.net" },
  { name = "Adriano Rutz", email = "adafede@gmail.com" },
]
keywords = [
  "LOTUS",
  "LinkedOpenData",
  "Wikidata",
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Environment :: Console",
  "Framework :: Pytest",
  "Framework :: Sphinx",
  "Framework :: tox",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "dash>=3.4.0",
  "dash-bootstrap-components>=2.0.4",
  "fastapi>=0.128.0",
  "fastapi-versioning>=0.10.0",
  "flask-caching>=2.3.1",
  "gunicorn>=25.0.1",
  "orjson>=3.11.7",
  "pydantic>=2.12.5",
  "rdkit>=2025.9.4",
  "requests>=2.32.5",
  "sqlalchemy>=2.0.46",
  "tqdm>=4.67.2",
  "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
  "coverage>=7.13.2",
  "pre-commit>=4.5.1",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
  "pytest-mock>=3.15.1",
  "pytest-xdist>=3.8.0",
  "requests-mock>=1.12.1",
]

[project.scripts]
start = "app:main"

[project.urls]
documentation = "https://github.com/lotusnprod/lotus-search"
homepage = "https://search.nprod.net"
repository = "https://github.com/lotusnprod/lotus-search"

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
fix = true

[tool.ruff.format]
preview = true

[tool.ty.rules]
unresolved-import = "ignore"
