[project]
name = "lotus_search"
version = "0.1.2"
description = "Lotus Search"
readme = "README.md"
requires-python = "==3.14.*"
license = { text = "LICENSE" }
authors = [
  { name = "Jonathan Bisson", email = "bjonnh-git@bjonnh.net" },
  { name = "Adriano Rutz", email = "adafede@gmail.com" },
]
keywords = [
  "LOTUS",
  "LinkedOpenData",
  "Wikidata",
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Environment :: Console",
  "Framework :: Pytest",
  "Framework :: Sphinx",
  "Framework :: tox",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "dash>=4.1.0",
  "dash-bootstrap-components>=2.0.4",
  "fastapi>=0.136.1",
  "fastapi-versioning>=0.10.0",
  "flask-caching>=2.4.0",
  "gunicorn>=26.0.0",
  "orjson>=3.11.9",
  "pydantic>=2.13.4",
  "rdkit>=2026.3.2",
  "requests>=2.34.2",
  "sqlalchemy>=2.0.49",
  "tqdm>=4.67.3",
  "uvicorn>=0.47.0",
]

[project.urls]
documentation = "https://github.com/lotusnprod/lotus-search"
homepage = "https://search.nprod.net"
repository = "https://github.com/lotusnprod/lotus-search"

[project.scripts]
start = "app:main"

[dependency-groups]
dev = [
  "coverage>=7.14.0",
  "prek>=0.4.1",
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.1.0",
  "pytest-mock>=3.15.1",
  "pytest-xdist>=3.8.0",
  "requests-mock>=1.12.1",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
fix = true

[tool.ruff.format]
preview = true

[tool.ty.rules]
unresolved-import = "ignore"
