[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Jonathan Bisson <bjonnh-git@bjonnh.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.7"
django-filter = "^23.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
